fixed images not fitting in boxes

--- a/style/style.css
+++ b/style/style.css
@@ -17,4 +17,10 @@
 .redditItemBox {
   border: solid grey 3px;
   margin: 3px;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.redditItemImage {
+
 }
